# image_ftp_sender

./: .gitignore  config.json  config_example.json  copy_image_metadate.py  db_handler.py  ftp_uploader.py  main.py  metadata_handler.py  pyproject.toml  readme.md  requirements.txt  resize_and_copy_files.py  sftp_upload.py
core/: config_loader.py
tests/: test_process_with_xmp.py
